# openISP_cpp

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  libraw.lib  main.cpp  module.cpp  module.h  openISP_cpp.sln  openISP_cpp.vcxproj  openISP_cpp.vcxproj.filters
include/: common.h
src/: CMakeLists.txt  common.cpp  main.cpp
